k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-worker
  namespace: ems
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: ems-worker

  template:
    metadata:
      labels:
        app: ems-worker

    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worker
          image: ghcr.io/suriyanandhimalai555-prog/ems-worker:latest
          imagePullPolicy: Always

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
