k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-backend
  namespace: ems
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: ems-backend
  template:
    metadata:
      labels:
        app: ems-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/suriyanandhimalai555-prog/ems-backend:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 4040
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 4040
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 4040
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: ems-backend
  namespace: ems
spec:
  type: ClusterIP
  selector:
    app: ems-backend
  ports:
    - name: http
      port: 4040
      targetPort: 4040
      protocol: TCP
