k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems-api-ingress
  namespace: ems
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx

  rules:
    - host: api.ems.avgprimetech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ems-backend
                port:
                  number: 4040

  tls:
    - hosts:
        - api.ems.avgprimetech.com
      secretName: ems-api-avgprimetech-tls
